--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: release
-        uses: actions/create-release@v1
+        id: release
+        uses: comnoco/create-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: name
           release_name: Release
+          draft: false
+          prerelease: false
         
