--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,14 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
-
+      - name: setup node
+        uses: actions/setup-node@v2
+        with:
+            node-version: 16.18
+      - name: install depedencies
+        run: npm ci
+      - name: test
+        run: npm test
       - name: release
         id: release
         uses: actions/create-release@v1
