--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: name
-          release_name: Release
+          tag_name:  ${{ github.ref }}
+          release_name: release ${{ github.ref }}
           draft: false
           prerelease: false
         
