--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{github.ref_name}}
-          release_name: release ${{ github.ref }}
+          release_name: release ${{ github.ref_name }}
           draft: false
           prerelease: false
         
