--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: echo ${{github.ref_name}}
       - name: checkout
         uses: actions/checkout@v4
       - name: setup node
@@ -18,6 +19,7 @@ jobs:
         with:
             node-version: 16.18
       - name: release
+        
         id: release
         uses: actions/create-release@v1
         env:
