--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          allowUpdates : true
-          tag_name: ${{github.ref_name}}
+          tag_name: issue
           release_name: release ${{ github.ref_name }}
           draft: false
           prerelease: false
