--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           tag_name: issue
           release_name: release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
+          draft: true
+          prerelease: true
 
 
         
